# MPI_Practical_Course

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.sh  lint.py
modules/: CMakeLists.txt  cmake_install.cmake
modules/experimental/: CMakeLists.txt
modules/experimental/scalar_multiplication/: CMakeLists.txt  main.cpp
modules/task_1/: CMakeLists.txt  array_sum.cpp  cmake_install.cmake
modules/task_1/Druzhinin_Alexei_task1_MinElVect/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Druzhinin_Alexei_task1_MinElVect.sln  Druzhinin_Alexei_task1_MinElVect.vcxproj  Druzhinin_Alexei_task1_MinElVect.vcxproj.filters  cmake_install.cmake  main.cpp
modules/task_1/Gaidaichuk_Yuri_task1_Arrays_Matching/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Gaidaichuk_Yuri_task1_Arrays_Matching.sln  Gaidaichuk_Yuri_task1_Arrays_Matching.vcxproj  Gaidaichuk_Yuri_task1_Arrays_Matching.vcxproj.filters  cmake_install.cmake  main.cpp
modules/task_1/Perov_Dima_task1_SumElVect/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Perov_Dima_task1_SumElVect.sln  Perov_Dima_task1_SumElVect.vcxproj  Perov_Dima_task1_SumElVect.vcxproj.filters  cmake_install.cmake  main.cpp
modules/task_1/Repin_Vladimir_Wrong_Order_Count/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Repin_Vladimir_Wrong_Order_Count.sln  Repin_Vladimir_Wrong_Order_Count.vcxproj  Repin_Vladimir_Wrong_Order_Count.vcxproj.filters  cmake_install.cmake  main.cpp
modules/task_1/Vdovin_Eugene_task1_NumWords/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Vdovin_Eugene_task1_NumWords.sln  Vdovin_Eugene_task1_NumWords.vcxproj  Vdovin_Eugene_task1_NumWords.vcxproj.filters  cmake_install.cmake  main.cpp
modules/task_1/Yakovlev_Pavel_mul_vect/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Yakovlev_Pavel_mul_vect.sln  Yakovlev_Pavel_mul_vect.vcxproj  Yakovlev_Pavel_mul_vect.vcxproj.filters  cmake_install.cmake  main.cpp
modules/task_1/Yunin_Ivan_maximum_elem_vector/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Yunin_Ivan_maximum_elem_vector.sln  Yunin_Ivan_maximum_elem_vector.vcxproj  Yunin_Ivan_maximum_elem_vector.vcxproj.filters  cmake_install.cmake  main.cpp
modules/task_1/Zolotareva_Olesya_task1_MiddleValueVect/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Zolotareva_Olesya_task1_MiddleValueVect.sln  Zolotareva_Olesya_task1_MiddleValueVect.vcxproj  Zolotareva_Olesya_task1_MiddleValueVect.vcxproj.filters  cmake_install.cmake  main.cpp
modules/task_1/ndanilov_rows_matrix_sum/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  main.cpp  ndanilov_rows_matrix_sum.sln  ndanilov_rows_matrix_sum.vcxproj  ndanilov_rows_matrix_sum.vcxproj.filters
modules/task_1/nesterov_name_task/: CMakeLists.txt  main.cpp
modules/task_1/vikhrev_array_sum/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  array_sum.cpp  cmake_install.cmake  vikhrev_array_sum.sln  vikhrev_array_sum.vcxproj  vikhrev_array_sum.vcxproj.filters
modules/task_2/: CMakeLists.txt  cmake_install.cmake
modules/task_2/Druzhinin_Alexei_mul_matrix/: CMakeLists.txt  main.cpp
modules/task_2/Gaidaichuk_Yuri_task2_Bubble_sorting/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Gaidaichuk_Yuri_task2_Bubble_sorting.sln  Gaidaichuk_Yuri_task2_Bubble_sorting.vcxproj  Gaidaichuk_Yuri_task2_Bubble_sorting.vcxproj.filters  cmake_install.cmake  main.cpp
modules/task_2/Perov_Dima_task2_ProducerConsumer/: CMakeLists.txt  main.cpp
modules/task_2/Repin_Vladimir_Gaussian_Elimination/: CMakeLists.txt  main.cpp
modules/task_2/Vdovin_Eugene_task2_Readers_and_Writers/: CMakeLists.txt  main.cpp
modules/task_2/Vikhrev_Ivan_task2_ImageProcessing/: CMakeLists.txt  main.cpp
modules/task_2/Yakovlev_Pavel_mul_matr_vect/: CMakeLists.txt  main.cpp
modules/task_2/Yunin_Ivan_task2_mult_matrix_vector_div_on_tapes/: CMakeLists.txt  main.cpp
modules/task_2/Zolotareva_Olesya_task2_Reduce/: CMakeLists.txt  main.cpp
modules/task_2/ndanilov_topologies/: CMakeLists.txt  host.cpp  host.h  main.cpp  packet.h
modules/task_2/ndanilov_topologies/include/: host.h  packet.h
modules/task_3/: CMakeLists.txt  cmake_install.cmake
modules/task_3/ndanilov_qsort/: CMakeLists.txt  main.c  main.cpp
modules/test_task/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  cmake_install.cmake  main.cpp  test_task.sln  test_task.vcxproj  test_task.vcxproj.filters
scripts/: lint.py
