project( Vikhrev_Ivan_task2_ImageProcessing )

 if( UNIX )
    message( STATUS "-- " ${PROJECT_NAME} )
     find_package( OpenCV REQUIRED )
    if( OpenCV_FOUND )
        include_directories( ${OpenCV_INCLUDE_DIRS} )
    endif( OpenCV_FOUND )
     add_executable( ${PROJECT_NAME} main.cpp )
     if( MPI_COMPILE_FLAGS )
        set_target_properties( ${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "${MPI_COMPILE_FLAGS}" )
    endif( MPI_COMPILE_FLAGS )
     if( MPI_LINK_FLAGS )
        set_target_properties( ${PROJECT_NAME} PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}" )
    endif( MPI_LINK_FLAGS )
     target_link_libraries( ${PROJECT_NAME} ${MPI_LIBRARIES} )
     if( OpenCV_FOUND )
        target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
    endif( OpenCV_FOUND )
else( UNIX )
    message( STATUS "-- " ${PROJECT_NAME} " - not build" )
endif( UNIX )